# biomedical-rag-bench

./: .claudeignore  .gitignore  ASSESSMENT-ro-import-sparqlgen.md  LICENSE  Makefile  PROJECT2-OBDA.md  README.md  REVIEW-traversal_info-mechanism.md  architecture-manual-images.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/release/: SKILL.md
.claude/skills/session-journal/: SKILL.md
.github/release-notes/: v1.0.0.md  v1.1.0.md  v1.1.1.md
.github/workflows/: release.yml
_resources/_troubleshoot-eval/: troubleshoot.md
_troubleshoot-eval/: troubleshoot.md
analysis/: README.md  build-cost.md  explore.ipynb  load.py  run-cost.md
eval/: FINDINGS.md  LATEST_RUN.md  README.md  harness.py  llm-roles.md  questions.jsonl  run_eval.py
eval/analysis/: README.md  explore.ipynb  load.py
eval/corpus/: README.md
eval/generate/: README.md  anthropic_generator.py  base.py  ollama_generator.py  registry.py
eval/judge/: README.md  base.py  deterministic.py  semantic.py
eval/produce/: README.md  produce.py  validate.py
eval/templates/: README.md  anticoagulant_vitamin_k_antagonist_fuzzy.yaml  build_registry.py  chromosome_of_gene.yaml  count_of_side_effects_caused_by_compound.yaml  diseases_treated_by_compound_negative.yaml  first_line_type2_diabetes_drug_fuzzy.yaml  gene_guarding_genome_against_dna_damage_fuzzy.yaml  gene_whose_loss_promotes_metastasis_fuzzy.yaml  genes_associated_with_compound_treated_diseases.yaml  genes_expressed_in_anatomy.yaml  path_between_compound_and_disease_via_gene.yaml  pathways_in_one_gene_excluding_another.yaml  run_ground_truth.py  shared_pathways_of_two_genes.yaml  symptoms_of_pharmacologic_class_treated_diseases.yaml
eval/templates/ground_truth/: chromosome_of_gene.rq  diseases_treated_by_compound_negative.rq  gene_guarding_genome_against_dna_damage_fuzzy.rq  genes_associated_with_compound_treated_diseases.rq  genes_expressed_in_anatomy.rq  neurodegenerative_amyloid_tau_dementia_fuzzy.rq  neurodegenerative_dopaminergic_movement_disorder_fuzzy.rq  path_between_compound_and_disease_via_gene.rq  symptoms_of_pharmacologic_class_treated_diseases.rq
ingest/: README.md  corpus_profile.py  graphdb-repo-config.ttl  hetionet-data-notes.md  hetionet_to_rdf.py
ingest/corpus/: ACTIVE  README.md
ingest/rdf/: README.md  graphdb-repo-config.ttl  hetionet-data-notes.md  hetionet_to_rdf.py
ingest/vector/: README.md  build_vectors.py  pubmed_fetch.py  select_corpus_entities.py
journal/: 2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-29.md  2026-05-30.md  2026-06-01.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-05_02.md  2026-06-06.md  2026-06-06_02.md  2026-06-08.md  2026-06-09.md  2026-06-09_02.md  2026-06-12.md  2026-06-12_02.md  2026-06-14.md  2026-06-15.md  2026-06-15_02.md  2026-06-15_03.md  2026-06-16.md  2026-06-26.md  INDEX.md
ontology/: README.md
produce/: EXAMPLE.md  README.md  produce.py  validate.py
produce/templates/: README.md  build_registry.py  chromosome_of_gene.yaml  diseases_treated_by_compound_negative.yaml  gene_whose_loss_promotes_metastasis_fuzzy.yaml  genes_associated_with_compound_treated_diseases.yaml  neurodegenerative_amyloid_tau_dementia_fuzzy.yaml  neurodegenerative_dopaminergic_movement_disorder_fuzzy.yaml  run_ground_truth.py  symptoms_of_pharmacologic_class_treated_diseases.yaml
produce/templates/ground_truth/: anticoagulant_vitamin_k_antagonist_fuzzy.rq  count_of_side_effects_caused_by_compound.rq  first_line_type2_diabetes_drug_fuzzy.rq  gene_whose_loss_promotes_metastasis_fuzzy.rq  genes_associated_with_compound_treated_diseases.rq  genes_expressed_in_anatomy.rq  pathways_in_one_gene_excluding_another.rq  shared_pathways_of_two_genes.rq
retrievers/: README.md  base.py  graph.py  null.py  sparqlgen.py  vector.py
scripts/: copy_full_runs.py  graphdb_ready.sh
secrets/: .env.example  README.md  graphdb.license.example
tests/: conftest.py  test_analysis_load.py  test_build_vectors.py  test_generate.py  test_harness.py  test_hetionet_to_rdf.py  test_judges.py  test_null.py  test_ollama_generator.py  test_pubmed_fetch.py  test_registry.py  test_semantic_judge.py  test_sparqlgen.py  test_validate.py
