[project]
name = "biomedical-rag-bench"
version = "1.0.0"
description = "Falsifiable, evolving evaluation harness for retrieval-augmented generation over biomedical knowledge, comparing retrieval strategies under a shared, additive-only evaluation contract."
requires-python = ">=3.12"
# Core deps intentionally empty: nothing is needed by every path. Capability-scoped
# extras keep it lean (RDF transform must not pull torch). Versions pinned in uv.lock.
dependencies = []

[project.optional-dependencies]
# JSON->Turtle. ijson streams the 712 MB source (box has ~7 GB RAM); pyoxigraph
# validates Turtle-star — rdflib 7.6 has no RDF-star support for our edge annotations.
ingest = [
    "ijson>=3.3",
    "pyoxigraph>=0.4",
]
# SPARQL retriever + loading Turtle into GraphDB over HTTP.
graph = [
    "httpx>=0.27",
]
# Vector retriever. torch (via sentence-transformers) stays out of the default install.
vector = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
# PubMed fetch (NCBI E-utilities) + .env handling for NCBI_API_KEY / GENERATOR_MODEL.
fetch = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]
# Generator/judge/writer adapters (Generator protocol strategies). anthropic = first
# provider; ollama drives the local SPARQL writer/judge (not the generator-under-test).
# All imported lazily, so base+registry load with nothing installed.
generate = [
    "anthropic>=0.40",
    "ollama>=0.3",
    "python-dotenv>=1.0",
]
# Corpus-profile measurement (corpus_profile.py): reads Chroma (chromadb, no embedding)
# + counts triples over SPARQL (httpx). Emits the profile run_eval keys by corpus_build_id.
profile = [
    "chromadb>=0.5",
    "httpx>=0.27",
]
# Eval-set production (stage 1 in eval/README.md): reads YAML templates + their
# ground-truth .rq files. PyYAML parses templates; httpx runs the ground-truth
# queries against GraphDB (the registry generator's --verify path; the step-3
# producer's main path). Kept separate from the heavy `eval` harness/analysis extra.
produce = [
    "pyyaml>=6",
    "httpx>=0.27",
]
# Eval harness + analysis notebook.
eval = [
    "ragas>=0.2",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "jupyter>=1.1",
]

[tool.uv]
# Keep the resolver honest about the Python floor.
package = false

[[tool.uv.index]]
# CPU-only PyTorch wheels — avoids 1.5 GB of CUDA packages on a dev box without
# a GPU. `explicit = true` means uv only hits this index for packages that
# explicitly name it (torch), not as a general fallback.
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# Pin torch to the CPU index. sentence-transformers pulls torch transitively;
# without this, uv resolves the CUDA build from PyPI, which drags in ~1.5 GB of
# NVIDIA packages and includes at least one wheel with malformed metadata.
torch = { index = "pytorch-cpu" }

[dependency-groups]
# Dev tooling (PEP 735). Installed by `uv sync` by default — not an opt-in extra,
# since tests run in every dev session. Tests that import a capability's module
# also need that capability's extra synced (e.g. `uv sync --extra ingest`).
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
# Repo root on sys.path so tests can `import ingest.hetionet_to_rdf` etc. The
# ingest/retrievers/eval dirs are implicit namespace packages, not installed.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
